objects/ASI_KOR_SKU_Product__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Btl_9L__c</fullName>
        <label>Btl / 9L</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Btl_Unit_Case__c</fullName>
        <label>Btl / Unit Case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Group__c</fullName>
        <label>Item Group</label>
        <referenceTo>ASI_KOR_Item_Group__c</referenceTo>
        <relationshipLabel>SKU Products</relationshipLabel>
        <relationshipName>SKU_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_JDE_Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>JDE Item Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_Quantity__c</fullName>
        <label>Quantity (BTL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SKU_Name__c</fullName>
        <label>SKU Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Standard_Bottle_Size_ml__c</fullName>
        <label>Standard Bottle Size (ml)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Name_for_Donation_Request__c</fullName>
        <label>Name for Donation Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SKU Product</label>
    <nameField>
        <label>SKU Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SKU Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>